/***********************************************************************
 X3 ChangeLog

2006-05-30  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Bumped version and changed list email.

	* x3.example.conf: Added SpamServ options.

	* src/chanserv.c: Join SpamServ if enabled when chanserv joins.

	* src/chanserv.h: Declerations

	* src/main.c: Init the new SpamServ service.

	* src/Makefile.am: Added SpamServ files.

	* src/Makefile.in: Regenerated

	* src/modcmd.c: Added SpamServ to REBINDALL.

	* src/opserv.c: Slab/X3 malloc STATS MEMORY updates.

	* src/proto-common.c: Make sure SpamServ gets notices.

	* src/spamserv.c: New service that checks for spamming, floods etc.
	Requires an oper to register it to a channel for it to work.

	* src/spamserv.h: Decelerations.

	* src/spamserv.help: Help entries for SpamServ.

2006-05-29  Neil Spierling  <sirvulcan@gmail.com>

	* Below functions by Wasted (Martijn Smit) <wasted@lostdomain.org>

	* src/chanserv.c: Added selectable bantypes.

	* src/chanserv.h: Added selectable bantypes.

	* src/chanserv.help: Added help entries.

2006-05-29  Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: Added user option ADVANCED, when we add more
	advanced commands users will need to set this to see the options
	in help. Further work in helpfile is still needed afaik. This is
	just the basics.

	* src/nickserv.h: Advanced option declerations.

	* src/nickserv.help: Added option ADVANCED, also added AUTOHIDE.
	Seems no one added that when they added the AUTOHIDE option.

2006-05-28  Neil Spierling  <sirvulcan@gmail.com>

	* Below functions by Wasted (Martijn Smit) <wasted@lostdomain.org>

	* x3.example.conf: Added new options- god_timeout, autojoin_channels,
	and denied_fakehost_words. Also dropped refresh_period for chanserv
	set resync.

	* src/chanserv.c: Added god_timeout, disable god mode automatically
	when the period times out. Also added a new set option- resync, auto